# bapipe-keypoints

./: .buildinfo  README.md  _config.yml  _toc.yml  docker-build.sh  docker-run.sh  docker-testbuild.sh  genindex.html  objects.inv  references.bib  requirements.txt  searchindex.js  setup.cfg
.github/workflows/: main.yml
_build/.doctrees/: README.doctree  environment.pickle
_build/.doctrees/demo/: demo.doctree
_build/.doctrees/docs/: intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  paper-structure.doctree
_build/.doctrees/docs.bk/: dev-notes.doctree
_build/html/: .buildinfo  README.html  genindex.html  objects.inv  search.html  searchindex.js
_build/html/_sources/docs/: paper-structure.md
_build/html/docs/: intro.html  markdown-notebooks.html  notebooks.html
_build/html/docs.bk/: dev-notes.html
_build/jupyter_execute/demo/: demo.ipynb  demo.py
_build/jupyter_execute/docs/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/docs/: intro.md  markdown-notebooks.ipynb  paper-structure.md
demo/: demo.ipynb  real-time-code.ipynb
docker/: Dockerfile.build  Dockerfile.run  Dockerfile.testbuild
docs/: camera-calibrations.ipynb  intro.md  markdown-notebooks.html  markdown.html  notebooks.html  paper-structure.html
docs.bk/: dev-notes.html  dev-notes.md
scripts/: docker-upload.sh  test-upload.sh  upload.sh
src/bapipe/: __init__.py  api.py  cli.py  utils.py
src/bapipe/gui/: draw_registrations.py
