[metadata]
name = bapipe-keypoints-telfer
version = 0.1.0.1
author = Andre Telfer
author_email = andretelfer@cmail.carleton.ca
description = Behavioural Analysis with Keypoints Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/A-Telfer/bapipe-keypoints
project_urls =
    Bug Tracker =https://github.com/A-Telfer/bapipe-keypoints/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    opencv-python-headless >= 4
    numpy
    scikit-image
    pandas 
    matplotlib
    ffmpeg-python
    tqdm
    napari[pyqt5]
    ruamel.yaml
    Click

[options.entry_points]
console_scripts =
        bapipe-telfer = bapipe.cli:cli

[options.packages.find]
where = src